--- a/index.html
+++ b/index.html
@@ -191,8 +191,23 @@
                         style="min-height: 300px; object-fit: cover;">
                     <div class="carousel-caption d-flex align-items-center justify-content-center">
                         <div class="p-5" style="width: 100%; max-width: 900px;">
-                            <h5 class="text-white text-uppercase mb-md-3">Think your Vision</h5>
-                            <h1 class="display-3 text-white mb-md-4">Reach your Destnation with Our Wings</h1>
+                            <h5 class="text-white text-uppercase text-right mb-md-3">Think your Vision</h5>
+                            <h1 class="display-3 text-white float-right text-right">Reach your Destnation with Our Wings
+
+                            </h1>
+                            <h1 class="display-3 text-white text-center">
+                            </h1>
+                            <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item" style="min-height: 300px;">
+                    <img class="position-relative w-100" src="img/slides/carousel-3.jpg"
+                        style="min-height: 300px; object-fit: cover;">
+                    <div class="carousel-caption d-flex align-items-center justify-content-center">
+                        <div class="p-5" style="width: 100%; max-width: 900px;">
+                            <h5 class="text-white text-uppercase mb-md-3">Tours and Travels</h5>
+                            <h1 class="display-3 text-white mb-md-4">Explore the Delightful Places With Us </h1>
                             <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Learn More</a>
                         </div>
                     </div>
@@ -208,17 +223,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item" style="min-height: 300px;">
-                    <img class="position-relative w-100" src="img/slides/carousel-3.jpg"
-                        style="min-height: 300px; object-fit: cover;">
-                    <div class="carousel-caption d-flex align-items-center justify-content-center">
-                        <div class="p-5" style="width: 100%; max-width: 900px;">
-                            <h5 class="text-white text-uppercase mb-md-3">Best Online Courses</h5>
-                            <h1 class="display-3 text-white mb-md-4">New Way To Learn From Home</h1>
-                            <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Learn More</a>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
@@ -465,7 +470,8 @@
             <div class="row align-items-center">
                 <div class="col-lg-7 mb-5 mb-lg-0">
                     <div class="mb-4">
-                        <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Need Any Queries</h5>
+                        <h5 class="text-white text-uppercase mb-3" style="letter-spacing: 5px;">Need Any
+                            Queries</h5>
                         <h1 class="text-white">Contact to Our Support Team</h1>
                     </div>
                     <p class="text-white">When you need advanced technical help for issues that can’t be resolved with
@@ -525,7 +531,7 @@
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
             <div class="text-center mb-5">
-                <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Team</h5>
+                <!-- <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Team</h5> -->
                 <h1>Meet Our Team</h1>
             </div>
             <div class="row">
@@ -543,8 +549,8 @@
                             </div> -->
                         </div>
                         <div class="bg-secondary p-4">
-                            <h5>Web Designer</h5>
-                            <p class="m-0">Web Designer</p>
+                            <h5>Founder & CEO</h5>
+                            <p class="m-0"></p>
                         </div>
                     </div>
                 </div>
@@ -562,8 +568,8 @@
                             </div> -->
                         </div>
                         <div class="bg-secondary p-4">
-                            <h5>Java FUll Stack</h5>
-                            <p class="m-0">Java FUll Stack</p>
+                            <h5>Manager</h5>
+                            <p class="m-0"></p>
                         </div>
                     </div>
                 </div>
@@ -581,8 +587,8 @@
                             </div> -->
                         </div>
                         <div class="bg-secondary p-4">
-                            <h5>Data Science</h5>
-                            <p class="m-0">Data Science</p>
+                            <h5>Marketing Manager</h5>
+                            <p class="m-0"></p>
                         </div>
                     </div>
                 </div>
@@ -600,8 +606,8 @@
                             </div> -->
                         </div>
                         <div class="bg-secondary p-4">
-                            <h5>PHP Developer</h5>
-                            <p class="m-0">PHP Developer</p>
+                            <h5>Counselor</h5>
+                            <p class="m-0"></p>
                         </div>
                     </div>
                 </div>
@@ -628,7 +634,7 @@
                                 say u can believe and go forward with Hykin overseas</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-1.png" alt="">
                             <h5 class="m-0">Satish Babu</h5>
-                            <span>Profession</span>
+                            <span>Travelor</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
@@ -636,7 +642,7 @@
                                 visa within 10 days.m</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-2.png" alt="">
                             <h5 class="m-0">Gariganti Suresh</h5>
-                            <span>Profession</span>
+                            <span>Student</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
@@ -645,7 +651,7 @@
                                 really excellent.</h4>
                             <img class="img-fluid mx-auto mb-3" src="img/testimonial-3.png" alt="">
                             <h5 class="m-0">siva krishna ummadi</h5>
-                            <span>Profession</span>
+                            <span>Student</span>
                         </div>
                     </div>
                 </div>
@@ -663,25 +669,28 @@
                 <h1>Latest From Our Blog</h1>
             </div>
             <div class="row pb-3">
-                <div class="col-lg-4 mb-4">
+                <div class="col-lg-6 mb-4">
                     <div class="blog-item position-relative overflow-hidden rounded mb-2">
                         <img class="img-fluid" src="img/blog-1.jpg" alt="">
-                        <a class="blog-overlay text-decoration-none" href="">
-                            <h5 class="text-white mb-3"></h5>
+
+                        <a class="blog-overlay text-decoration-none" href="https://www.youtube.com/watch?v=-V1yn8FN2NE">
+                            <i class="fab fa-youtube"></i>
+                            <h5 class="text-white mb-3">Hykin Overseas Introduction
+                                video</h5>
                             <p class="text-primary m-0"></p>
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-4">
+                <div class="col-lg-6 mb-4">
                     <div class="blog-item position-relative overflow-hidden rounded mb-2">
                         <img class="img-fluid" src="img/blog-2.jpg" alt="">
-                        <a class="blog-overlay text-decoration-none" href="">
-                            <h5 class="text-white mb-3"></h5>
+                        <a class="blog-overlay text-decoration-none" href="https://www.youtube.com/watch?v=kki4sFKyKpI">
+                            <h5 class="text-white mb-3">Hykin Overseas Informative Video </h5>
                             <p class="text-primary m-0"></p>
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-4 mb-4">
+                <!-- <div class="col-lg-4 mb-4">
                     <div class="blog-item position-relative overflow-hidden rounded mb-2">
                         <img class="img-fluid" src="img/blog-3.jpg" alt="">
                         <a class="blog-overlay text-decoration-none" href="">
@@ -689,7 +698,7 @@
                             <p class="text-primary m-0"></p>
                         </a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -702,23 +711,24 @@
             <div class="col-lg-7 col-md-12">
                 <div class="row">
                     <div class="col-md-6 mb-5">
-                        <h5 class="text-primary text-uppercase mb-4" style="letter-spacing: 5px;">Get In Touch</h5>
+                        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Get In Touch</h5>
                         <p><i class="fa fa-map-marker-alt mr-2"></i>Dwarakapuri, Punjagutta, Hyd</p>
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 76718 17201</p>
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <!-- <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
                             <a class="btn btn-outline-light btn-facebook btn-square mr-2"
                                 href="https://www.facebook.com/profile.php?id=61550644413617"><i
                                     class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-youtube btn-square mr-2"
                                 href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-instagram btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                            <a class="btn btn-outline-light btn-instagram btn-square mr-2" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
                             "><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-whatsapp btn-square"
+                                href="https://wa.me/message/HYXBIBJVXC3RP1"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
-                        <h5 class="text-primary text-uppercase mb-4" style="letter-spacing: 5px;">Our Services</h5>
+                        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Our Services</h5>
                         <div class="d-flex flex-column justify-content-start">
                             <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Education</a>
                             <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Visas</a>
@@ -731,7 +741,7 @@
                 </div>
             </div>
             <div class="col-lg-5 col-md-12 mb-5">
-                <h5 class="text-primary text-uppercase mb-4" style="letter-spacing: 5px;">Newsletter</h5>
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Newsletter</h5>
                 <p>Firstly, we are pleased to announce that our expansion plans are well underway, with new offices
                     opening in key locations across the world. This will enable us to better serve our clients and
                     partners, and further strengthen our global presence.</p>
@@ -751,8 +761,9 @@
         style="border-color: rgba(256, 256, 256, .1) !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a href="#">Hykin Overseas</a>. All Rights Reserved. Designed by <a
-                        href="https://htmlcodex.com">2023</a>
+                <p class="m-0 text-white">&copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights
+                    Reserved.
+                    Designed by <a href="https://htmlcodex.com">2023</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
