--- a/study-in-uk.html
+++ b/study-in-uk.html
@@ -137,7 +137,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header-singapore-study">
+    <div class="container-fluid page-header-uk-study">
         <div class="container">
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
                 <h3 class="display-4 text-white text-uppercase">United Kingdom</h3>
@@ -407,7 +407,7 @@
                                 <li>Student aged between 18 and 20 it is £5.90 per hour</li>
                                 <li>Student in the age bracket 21 – 24 it is £7.83 per hour</li>
                                 <li>Students aged 25 and over it is £7.83 per hour</li>
-                                
+
                             </ul>
                             </p>
 
