--- a/study-in-canada.html
+++ b/study-in-canada.html
@@ -816,8 +816,10 @@
                                 class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-youtube btn-square mr-2"
                             href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-instagram btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                        <a class="btn btn-outline-light btn-instagram btn-square mr-2" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
                         "><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-whatsapp btn-square"
+                                href="https://wa.me/message/HYXBIBJVXC3RP1"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
