--- a/study-in-usa.html
+++ b/study-in-usa.html
@@ -326,7 +326,7 @@
                     <div class="mb-5">
                         <h2 class="mb-5">Why Study In USA?</h2>
                         <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;"
-                            src="img/singapore/about-singapore.jpg" alt="Image">
+                            src="img/usa/why-study-abroad.jpg" alt="Image">
                         <p class="">The United States of America (USA) is one of the most popular education destinations
                             in the world that has more than 1 million international students. You will find students
                             from across the globe in the USA. One of the major reasons is of course that the country
@@ -791,7 +791,7 @@
             <div class="col-lg-7 col-md-12">
                 <div class="row">
                     <div class="col-md-6 mb-5">
-                        <h5 class="text-primary text-uppercase mb-4" style="letter-spacing: 5px;">Get In Touch</h5>
+                        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Get In Touch</h5>
                         <p><i class="fa fa-map-marker-alt mr-2"></i>Dwarakapuri, Punjagutta, Hyd</p>
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 76718 17201</p>
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
@@ -801,12 +801,14 @@
                                 class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-outline-light btn-youtube btn-square mr-2"
                             href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-instagram btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                        <a class="btn btn-outline-light btn-instagram btn-square mr-2" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
                         "><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-outline-light btn-whatsapp btn-square"
+                                href="https://wa.me/message/HYXBIBJVXC3RP1"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
-                        <h5 class="text-primary text-uppercase mb-4" style="letter-spacing: 5px;">Our Courses</h5>
+                        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Our Courses</h5>
                         <div class="d-flex flex-column justify-content-start">
                             <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Education</a>
                             <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Visas</a>
@@ -819,7 +821,7 @@
                 </div>
             </div>
             <div class="col-lg-5 col-md-12 mb-5">
-                <h5 class="text-primary text-uppercase mb-4" style="letter-spacing: 5px;">Newsletter</h5>
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Newsletter</h5>
                 <p>Firstly, we are pleased to announce that our expansion plans are well underway, with new offices
                     opening in key locations across the world. This will enable us to better serve our clients and
                     partners, and further strengthen our global presence.</p>
