--- a/work-visa.html
+++ b/work-visa.html
@@ -532,7 +532,7 @@
             <div class="col-lg-7 col-md-12">
                 <div class="row">
                     <div class="col-md-6 mb-5">
-                        <h5 class="text-primary text-uppercase mb-4" style="letter-spacing: 5px;">Get In Touch</h5>
+                        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Get In Touch</h5>
                         <p><i class="fa fa-map-marker-alt mr-2"></i>Dwarakapuri, Punjagutta, Hyd</p>
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 76718 17201</p>
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
@@ -542,12 +542,14 @@
                                     class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-youtube btn-square mr-2"
                                 href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-instagram btn-square" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                            <a class="btn btn-outline-light btn-instagram btn-square mr-2" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
                     "><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-outline-light btn-whatsapp btn-square"
+                                href="https://wa.me/message/HYXBIBJVXC3RP1"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-5">
-                        <h5 class="text-primary text-uppercase mb-4" style="letter-spacing: 5px;">Our Courses</h5>
+                        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Our Courses</h5>
                         <div class="d-flex flex-column justify-content-start">
                             <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Education</a>
                             <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Visas</a>
@@ -560,7 +562,7 @@
                 </div>
             </div>
             <div class="col-lg-5 col-md-12 mb-5">
-                <h5 class="text-primary text-uppercase mb-4" style="letter-spacing: 5px;">Newsletter</h5>
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Newsletter</h5>
                 <p>Firstly, we are pleased to announce that our expansion plans are well underway, with new offices
                     opening in key locations across the world. This will enable us to better serve our clients and
                     partners, and further strengthen our global presence.</p>
