--- a/study-in-canada.html
+++ b/study-in-canada.html
@@ -330,7 +330,7 @@
                     <div class="mb-5">
                         <h2 class="mb-4">Why Study In Canada?</h2>
                         <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;"
-                            src="img/singapore/about-singapore.jpg" alt="Image">
+                            src="img/canada/canada1.jpg" alt="Image">
                         <p class="">Canada is a developed country which has the highest nominal per capita income
                             throughout the world, and it is the eighth highest ranking in the Human Development Index
                         </p>
