--- a/study-in-uk.html
+++ b/study-in-uk.html
@@ -330,7 +330,7 @@
                     <div class="mb-5">
                         <h2 class="mb-4">Why Study In UK?</h2>
                         <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;"
-                            src="img/singapore/about-singapore.jpg" alt="Image">
+                            src="img/uk/uk.jpg" alt="Image">
                         <p class="">World-Class universities and colleges, internationally recognized degrees and
                             diplomas, and 2-year post-study work rights make the UK ideal for students who want to take
                             their careers to new heights. British institutions not only emphasize skill development,
