--- a/study-in-usa.html
+++ b/study-in-usa.html
@@ -326,7 +326,7 @@
                     <div class="mb-5">
                         <h2 class="mb-5">Why Study In USA?</h2>
                         <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;"
-                            src="img/singapore/about-singapore.jpg" alt="Image">
+                            src="img/usa/usa.jpg" alt="Image">
                         <p class="">The United States of America (USA) is one of the most popular education destinations
                             in the world that has more than 1 million international students. You will find students
                             from across the globe in the USA. One of the major reasons is of course that the country
@@ -353,7 +353,7 @@
                         <div class="text-center mb-5">
                             <h2 class="mb-4">Academic flexibility</h2>
                             <img class="img-fluid rounded w-20 float-left mr-4 mb-3" style="width: 40%; height: 500px;"
-                                src="img/Singapore-culture.jpg" alt="Image">
+                                src="img/usa/usa1.jpg" alt="Image">
                             <p class="">According to the needs as well as interests of the students, flexible options
                                 are offered by
                                 the American higher education system. At the undergraduate level, the students get the
