--- a/study-in-australia.html
+++ b/study-in-australia.html
@@ -324,7 +324,7 @@
                     <div class="mb-5">
                         <h2 class="mb-5">Why Study In Australia?</h2>
                         <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;"
-                            src="img/singapore/about-singapore.jpg" alt="Image">
+                            src="img/australia/austrila1.jpg" alt="Image">
                         <p class="">The Australian education system has produced scientists, designers, educators,
                             entrepreneurs, artists and humanitarians who have changed the world. Their global
                             achievements include the “black box” now on every airplane, the Earth hour initiative, and
