--- a/study-in-australia.html
+++ b/study-in-australia.html
@@ -864,7 +864,7 @@
         style="border-color: rgba(256, 256, 256, .1) !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a href="#">Hykin Overseas</a>. All Rights Reserved. Designed by <a
+                <p class="m-0 text-white">&copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights Reserved. Designed by <a
                         href="https://htmlcodex.com">2023</a>
                 </p>
             </div>
