--- a/study.html
+++ b/study.html
@@ -639,7 +639,7 @@
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
                 <p class="m-0 text-white">
-                    &copy; <a href="#">Hykin Overseas</a>. All Rights Reserved. Designed
+                    &copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights Reserved. Designed
                     by <a href="https://htmlcodex.com">2023</a>
                 </p>
             </div>
