--- a/singapore.html
+++ b/singapore.html
@@ -163,8 +163,7 @@
                     <div class="mb-3">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study-in-singapore.png"
-                            alt="Image">
+                        <img class="img-fluid rounded w-100 mb-4" src="img/singapore/sinapore-tour.jpg" alt="Image">
                         <p>Singapore is a top destination for international students looking to pursue higher education.
                             The city-state is known for its excellent education system, world-class universities, and
                             diverse multicultural society.
@@ -331,8 +330,8 @@
                 <div class="col-lg-12">
                     <div class="mb-5">
                         <h2 class="mb-5">Why Study in Singapore ?</h2>
-                        <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;" src="img/singapore/about-singapore.jpg"
-                            alt="Image">
+                        <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;"
+                            src="img/singapore/about-singapore.jpg" alt="Image">
                         <p class="">Singapore is a small island nation located in Southeast Asia that has gained a
                             reputation as
                             a world-class education hub. There are several reasons why students from around the globe
