--- a/singapore.html
+++ b/singapore.html
@@ -164,8 +164,7 @@
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-4">A Trip to Singapore.</h1>
                         <h4 class="mb-5">Things to Do and See for the Best Experience.</h4>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study-in-singapore.png"
-                            alt="Image">
+                        <img class="img-fluid rounded w-100 mb-4" src="img/singapore/sinapore-tour.jpg" alt="Image">
                         <p>This little country on the Malay Peninsula invites you to visit its landmarks. It’s one of
                             the three sovereign city-states still in existence in the world and the only one that’s an
                             island. But don’t let that fool you, as the country offers plenty of activities and a
@@ -959,8 +958,8 @@
         style="border-color: rgba(256, 256, 256, .1) !important;">
         <div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white">&copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights Reserved. Designed by <a
-                        href="https://htmlcodex.com">2023</a>
+                <p class="m-0 text-white">&copy; <a class="text-primary" href="#">Hykin Overseas</a>. All Rights
+                    Reserved. Designed by <a href="https://htmlcodex.com">2023</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
