--- a/singapore.html
+++ b/singapore.html
@@ -513,7 +513,7 @@
 
 
                 <!-- Course Start -->
-                <section class="pt-5 pb-5">
+                <!-- <section class="pt-5 pb-5">
                     <div class="container">
                         <div class="row">
                             <div class="col-12 text-center mb-5">
@@ -644,7 +644,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- Course End -->
 
                 <!--course start-->
