--- a/singapore.html
+++ b/singapore.html
@@ -334,7 +334,7 @@
                     <div class="mb-5">
                         <h2 class="mb-5">Why Tour to Singapore ?</h2>
                         <img class="img-fluid rounded float-left mr-4 mb-3" style="width: 35%; height: 500px;"
-                            src="img/singapore/about-singapore.jpg" alt="Image">
+                            src="img/singapore/places-in-singapore.jpg" alt="Image">
                         <h5 class="mb-4">It’s a city of not just one island, but 64</h5>
                         <p class="">You might not know it but Singapore’s land area includes as many as 64 offshore
                             islands that surround the main island. These include Sentosa—a popular island resort with
@@ -478,7 +478,7 @@
                         <div class=" text-align: justify mt-5">
                             <h2 class="mb-3 text-center">Singapore Tourist Visa Application</h2>
                             <img class="img-fluid float-right rounded w-20 mr-4 mb-3" style="width: 40%; height: 500px;"
-                                src="img/singapore/singapore-visa.jpg" alt="Image">
+                                src="img/singapore/zoo waterfall island (2).jpg" alt="Image">
                             <!-- <p>After receiving the confirmation letter of admission from a desired institute, students
                                 need to apply for a student pass to enter Singapore. Institutes in Singapore will file
                                 the Singapore student pass for Indian application on behalf of the student to Singapore
