--- a/study.html
+++ b/study.html
@@ -309,7 +309,7 @@
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Study in Other Schengen</a>
+                                <a href="404.html" class="text-decoration-none h6 m-0">Study in Other Schengen</a>
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                         </ul>
@@ -587,13 +587,13 @@
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
                             <a class="btn btn-outline-light btn-facebook btn-square mr-2"
-                            href="https://www.facebook.com/profile.php?id=61550644413617"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-youtube btn-square mr-2"
-                            href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-instagram btn-square mr-2" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
+                                href="https://www.facebook.com/profile.php?id=61550644413617"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-youtube btn-square mr-2"
+                                href="https://www.youtube.com/@HykinOverseas"><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-instagram btn-square mr-2" href="https://www.instagram.com/invites/contact/?i=g6jdj37mrv1&utm_content=scmrt5w
                         "><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-whatsapp btn-square"
+                            <a class="btn btn-outline-light btn-whatsapp btn-square"
                                 href="https://wa.me/message/HYXBIBJVXC3RP1"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
